[package]
name = "asai-macro"
version = "0.1.0"
edition = "2021"
description = "Macros for asai"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.32"
syn = { version = "2.0.27", features = ["extra-traits"] }
proc-macro2 = "1.0.66"